--- a/codeoversight.yml
+++ b/codeoversight.yml
@@ -14,26 +14,26 @@ php:
     indentation_whitespace: tab
     opening_doc_asterisk: double
     php_tag_casing: lower
-    php_tags: full_php_tags
-    remove_double_semicolon: remove
-    remove_empty_trailing_leading_doc_lines: remove
-    semicolon_before_closing_php_tag: add
-    static_array_index_whitespace: no_space
-    string_operator_whitespace: whitespace
-    trailing_whitespace: remove
-    true_false_casing: lower
-    type_cast_casing: lower
-    type_cast_inner_whitespace: no_space
-    use_quotes: single_quotes
-    variable_array_index_whitespace: whitespace
-    whitespace_after_doc_asterisk: single_space
-    whitespace_after_else: space
-    whitespace_after_function_open: no_space
-    whitespace_after_function: newline
-    whitespace_before_control_structure_brace: space
-    whitespace_before_control_structure_parentheses: whitespace
-    whitespace_before_doc_asterisk: space
-    whitespace_before_else: space
-    whitespace_before_function_brace: space
-    whitespace_before_function_close: no_space
-    whitespace_before_function_parentheses: no_space
+    # php_tags: full_php_tags
+    # remove_double_semicolon: remove
+    # remove_empty_trailing_leading_doc_lines: remove
+    # semicolon_before_closing_php_tag: add
+    # static_array_index_whitespace: no_space
+    # string_operator_whitespace: whitespace
+    # trailing_whitespace: remove
+    # true_false_casing: lower
+    # type_cast_casing: lower
+    # type_cast_inner_whitespace: no_space
+    # use_quotes: single_quotes
+    # variable_array_index_whitespace: whitespace
+    # whitespace_after_doc_asterisk: single_space
+    # whitespace_after_else: space
+    # whitespace_after_function_open: no_space
+    # whitespace_after_function: newline
+    # whitespace_before_control_structure_brace: space
+    # whitespace_before_control_structure_parentheses: whitespace
+    # whitespace_before_doc_asterisk: space
+    # whitespace_before_else: space
+    # whitespace_before_function_brace: space
+    # whitespace_before_function_close: no_space
+    # whitespace_before_function_parentheses: no_space
