--- a/codeoversight.yml
+++ b/codeoversight.yml
@@ -1,19 +1,21 @@
 php:
-    align_array_elements: space
-    align_doc_tags: space
-    align_variables: space
-    closing_newline: add
-    closing_php_tag: remove
+    # align_array_elements: space
+    # align_doc_tags: space
+    # align_variables: space
+    # closing_newline: add
+    # closing_php_tag: remove
+    
     # control_structure_parentheses_inner_whitespace: whitespace
     # doc_function_whitespace: no_space
     # else_if_whitespace: no_space
     # exclamation_whitespace: whitespace
-    # force_control_structure_braces: force
+    force_control_structure_braces: force
     # function_args_separator_whitespace: whitespace
     # function_parentheses_inner_whitespace: whitespace
     # indentation_whitespace: tab
     # opening_doc_asterisk: double
     # php_tag_casing: lower
+    
     # php_tags: full_php_tags
     # remove_double_semicolon: remove
     # remove_empty_trailing_leading_doc_lines: remove
