--- a/codeoversight.yml
+++ b/codeoversight.yml
@@ -5,10 +5,10 @@ php:
     # closing_newline: add
     # closing_php_tag: remove
     
-    # control_structure_parentheses_inner_whitespace: whitespace
-    # doc_function_whitespace: no_space
-    # else_if_whitespace: no_space
-    # exclamation_whitespace: whitespace
+    control_structure_parentheses_inner_whitespace: whitespace
+    doc_function_whitespace: no_space
+    else_if_whitespace: no_space
+    exclamation_whitespace: whitespace
     force_control_structure_braces: force
     # function_args_separator_whitespace: whitespace
     # function_parentheses_inner_whitespace: whitespace
