--- a/codeoversight.yml
+++ b/codeoversight.yml
@@ -6,10 +6,10 @@ php:
     # closing_php_tag: remove
     
     control_structure_parentheses_inner_whitespace: whitespace
-    doc_function_whitespace: no_space
+    # doc_function_whitespace: no_space
     else_if_whitespace: no_space
-    exclamation_whitespace: whitespace
-    force_control_structure_braces: force
+    # exclamation_whitespace: whitespace
+    # force_control_structure_braces: force
     # function_args_separator_whitespace: whitespace
     # function_parentheses_inner_whitespace: whitespace
     # indentation_whitespace: tab
